2022-11-24  Agathe Porte  <floss@microjoe.org>

	* doc/poke.texi: fix sbm image bytes in example.

2022-11-23  Arsen Arsenović  <arsen@aarsen.me>

	* doc/Makefile.am (poke.text): Make dependencies match other
	Texinfo targets.

2022-11-23  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-lex.l (build_overflow_error_msg): Use PRIu64 instead
	of `lu'.

2022-11-21  Arsen Arsenović  <arsen@aarsen.me>

	* etc/hacking.org (Continuous Integration): Document the
	Sourceware buildbot.
	* HACKING: Regenerate.

2022-11-16  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* pickles/uuid.pk: New pickle.
	* pickles/redoxfs.pk: Likewise.
	* pickles/pcap.pk: Likewise.
	* testsuite/poke.pickles/uuid-test.pk: New test.
	* testsuite/poke.pickles/pcap-test.pk: Likewise.
	* testsuite/poke.pickles/redoxfs-test.pk: Likewise.
	* pickles/Makefile.am (dist_pickles_DATA): Update.
	* testsuite/Makefile.am (EXTRA_DIST): Likewise.

2022-11-16  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-lex.l: Require at least one digit in octal
	constants.
	* testsuite/poke.pkl/integers-diag-3.pk: New test.
	* testsuite/poke.pkl/integers-diag-4.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2022-11-13  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm.jitter: Change `map' instruction to not raise
	exceptions.

2022-11-11  Arsen Arsenović  <arsen@aarsen.me>

	* .gitmodules: Upgrade to HTTPS URLs.

2022-11-11  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.map/maps-unions-17.pk: New test.
	* testsuite/poke.map/maps-unions-18.pk: Likewise.
	* testsuite/poke.map/maps-unions-19.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2022-11-11  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_field_extractor): Keep the right
	lexical environment when subpassing results in a constraint
	exception.

2022-11-11  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* etc/vim/syntax/poke.vim (keyword): Add `computed' to the list
	of keywords.
